# webserv

./: .gitignore  CMakeLists.txt  FAQ.md  HTTP.md  Makefile  Nginx.md  README.md  TODO.md  main.cpp  php-cgi.sh  siege.sh
config/: .htpasswd  index.htm  index.html  index.html.fr  index.html.ru  webserv.conf
config/errors/: 502.html  504.html
config/errors/assets/css/: style.css
includes/parser/: Base.hpp  Config.hpp  Location.hpp  Request.h  Request.hpp  Response.hpp  Server.hpp
includes/server/: Cgi.hpp  Client.hpp  Manager.hpp  Server.hpp
includes/utils/: Base64.hpp  Data.hpp  HttpStatusCode.hpp  StatusCodeData.hpp  TraceException.hpp  utils.hpp
srcs/: main.cpp
srcs/parser/: Base.cpp  Location.cpp  Request.cpp  Response.cpp  Server.cpp
srcs/server/: Cgi.cpp  Client.cpp  Manager.cpp  Server.cpp
srcs/utils/: Base64.cpp  Data.cpp  HttpStatusCode.cpp  StatusCodeData.cpp  utils.cpp
test_dir/testers/: own_tester.py  requests
testers/: own_tester.py  requests
